--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ python-dotenv==1.0.0
 streamlit==1.26.0
 openai==1.30.1
 langchain
-langchain_openai
-langchain_community
+langchain-openai
+langchain-community
+matplotlib
+pandas
